# sonic-bloom

./: LICENSE  README.md  pyproject.toml
assets/: demo.tape
sonic_bloom/: __main__.py  agent.py  app.py  config.py  history.py
sonic_bloom/bridge/: __init__.py  catalog.py  events.py  scripting_bridge.py
sonic_bloom/cli/: __init__.py  commands.py  display.py  selection.py
sonic_bloom/providers/: __init__.py  anthropic.py  openai.py
sonic_bloom/soul/: manager.py  prompts.py
sonic_bloom/tools/: __init__.py  music_control.py  music_info.py  music_playlists.py  music_search.py
