[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonic-bloom"
version = "0.1.0"
description = "A little terminal app that controls Apple Music on macOS via natural language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "James Wirth" }]
keywords = ["apple-music", "macos", "llm", "terminal", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "anthropic>=0.75.0",
    "rich>=13.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-ScriptingBridge>=10.0",
    "pyobjc-framework-MediaPlayer>=10.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
all = ["openai>=1.0"]

[project.urls]
Homepage = "https://github.com/James-Wirth/sonic-bloom"
Repository = "https://github.com/James-Wirth/sonic-bloom"

[project.scripts]
sonic-bloom = "sonic_bloom.__main__:main"
